--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -42,7 +42,7 @@
                     Prepare a Return
                 </a>
                 <a class="btn btn-lg btn-default" href="{{ path('view_all_outstanding_returns') }}">
-                    View Outstanding Returns
+                    View All Returns
                 </a>
                 <a class="btn btn-lg btn-default" href="{{ path('view_all_orders') }}">
                     View All Orders
