--- a/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
@@ -82,7 +82,7 @@
                         </div>
                     {% else %}
                         <div class="title" style="padding-bottom: 20px; padding-top: 20px;">
-                            No submitted orders at this time.
+                            There are no parts that need to be sent to Uster.
                         </div>
                     {% endif %}
 
@@ -152,7 +152,7 @@
                         </div>
                     {% else %}
                         <div class="title" style="padding-bottom: 20px; padding-top: 20px;">
-                            No submitted orders at this time.
+                            Uster has not received any parts from you yet.
                         </div>
                     {% endif %}
 
