--- a/src/AppBundle/Resources/views/Cart/prepare-a-return.html.twig
+++ b/src/AppBundle/Resources/views/Cart/prepare-a-return.html.twig
@@ -19,7 +19,7 @@
     <div class="row">
         <div id="submitted" class="col-md-12">
             <div class="portlet">
-                <div class="portlet-title" style="background-color: #d9edf7 !important;">
+                <div class="portlet-title" style="background-color: #fcf8e3 !important;">
                     <div class="caption">
                         PARTS THAT NEED TO BE RETURNED
                     </div>
@@ -30,6 +30,7 @@
                             <table class="table table-striped table-hover" style="margin-top: 40px;">
                                 <thead>
                                 <tr>
+                                    <th class="hidden-480"></th>
                                     <th>ORDER #</th>
                                     <th class="hidden-480">DATE SUBMITTED</th>
                                     <th>APPROVED</th>
@@ -45,6 +46,12 @@
 
                                 {% for item in to_be_returned %}
                                     <tr>
+                                        <td>
+                                            <button class="btn btn-success btn-xs purple"
+                                                    onclick="confirmShipment({{ item.id }})"><i
+                                                        class="fa fa-check"></i> Confirm Shipment
+                                            </button>
+                                        </td>
                                         <td style="padding-top: 20px;">{{ item.order_number }}</td>
                                         <td style="padding-top: 20px;">{{ item.submit_date | date('m/d/Y') }}</td>
                                         <td style="padding-top: 20px;">
@@ -76,10 +83,6 @@
                                                href="{{ path('view_past_order', {'order_id': item.cart_id}) }}">
                                                 <i class="fa fa-book"></i> view order
                                             </a>
-                                            <button class="btn btn-default btn-xs purple"
-                                                    onclick="confirmShipment({{ item.id }})"><i
-                                                        class="fa fa-check"></i> Confirm Shipment
-                                            </button>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -117,7 +120,7 @@
                 'cart_product_id': id,
                 'returned_items_quantity': newNumItemsReceived
             }).done(function (data) {
-                location.reload();
+                location.href = '{{ path('view_all_outstanding_returns') }}';
             }).fail(function (xhr, status, error) {
                 alert('ERROR! - ' + xhr.responseText);
             });
