--- a/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
@@ -11,11 +11,14 @@
     </style>
 {% endblock page_title %}
 
-{% block page_name %}
+{% block actions %}
 
-{% endblock page_name %}
+{% endblock actions %}
 
 {% block content %}
+    <a class="btn btn-primary btn-m purple" href="{{ path('prepare_a_return') }}" style="margin-bottom: 20px;"><i
+                class="fa fa-plus"></i> Prepare a Return</a>
+
     <div class="row">
         <div id="submitted" class="col-md-12">
             <div class="portlet">
@@ -37,7 +40,7 @@
                                     <th class="hidden-480">DESCRIPTION</th>
                                     <th class="hidden-480">QUANTITY</th>
                                     <th class="hidden-480">ITEMS SHIPPED</th>
-                                    <th class="hidden-480"></th>
+                                    <th class="hidden-480">SHIPPED</th>
                                     <th class="hidden-480"></th>
                                 </tr>
                                 </thead>
@@ -111,7 +114,7 @@
                                     <th class="hidden-480">DESCRIPTION</th>
                                     <th class="hidden-480">QUANTITY</th>
                                     <th class="hidden-480">ITEMS SHIPPED</th>
-                                    <th class="hidden-480"></th>
+                                    <th class="hidden-480">SHIPPED</th>
                                     <th class="hidden-480"></th>
                                 </tr>
                                 </thead>
@@ -130,8 +133,12 @@
                                         </td>
                                         <td style="padding-top: 20px;">{{ item.stock_number }}</td>
                                         <td style="padding-top: 20px;">{{ item.description }}</td>
-                                        <td style="padding-top: 20px;">{{ item.quantity }}</td>
-                                        <td style="padding-top: 20px;">{{ item.returned_items_shipped_quantity }}</td>
+                                        <td style="padding-top: 20px;">
+                                            <center>{{ item.quantity }}</center>
+                                        </td>
+                                        <td style="padding-top: 20px;">
+                                            <center>{{ item.returned_items_shipped_quantity }}</center>
+                                        </td>
                                         <td style="padding-top: 20px;">
                                             {% if item.quantity == item.returned_items_shipped_quantity %}
                                                 <span class="label label-sm label-success">Shipped</span>
