--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -1,6 +1,6 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}All Users{% endblock %}
+{% block title %}All Outstanding Orders{% endblock %}
 {% block page_title %}
     All Outstanding Orders
 {% endblock page_title %}
@@ -24,7 +24,7 @@
                 </div>
                 <div class="portlet-body">
                     <div class="table-scrollable">
-                        <table class="table table-striped table-bordered table-hover">
+                        <table id="part-table" class="table table-striped table-bordered table-hover">
                             {% if parts_needing_return %}
                                 <thead>
                                 <tr>
@@ -99,7 +99,9 @@
                                         <td style="width: 60px;">
                                             <a href="{{ path('admin_order_approve', {'cart_id': item.cart_id}) }}"
                                                class="btn btn-info btn-xs">View Order</a>
-                                            <button class="btn btn-default btn-xs purple"
+                                            <br>
+                                            <br>
+                                            <button class="btn btn-default btn-sm purple"
                                                     onclick="approveReturn({{ item.id }})"><i
                                                         class="fa fa-check"></i> Confirm return
                                             </button>
@@ -200,16 +202,15 @@
 {% block footer %}
     <script>
         $(document).ready(function () {
-            $('#part-table').DataTable();
+            $('#part-table').DataTable({"paging": false});
 
             $('a.btn[data-role="delete-user"]').on('click', function (e) {
                 return confirm("Are you sure you want to delete this user?");
             });
         });
-        $('#part-table').DataTable({
-
-            "paging": false
-        });
+        //        $('#part-table').DataTable({
+        //            "paging": false
+        //        });
         function approveReturn(id) {
 //            confirm("Are you sure you want to count these items as returned?")
             var numItemsReceived = parseInt($('#' + id + '-shipped').text());
